app/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobhunter-fe
  namespace: ac-dev
spec:
  revisionHistoryLimit: 2 # chỉ giữ 2 revision gần nhất
  replicas: 1
  selector:
    matchLabels:
      app: jobhunter-fe
  template:
    metadata:
      labels:
        app: jobhunter-fe
    spec:
      hostAliases:
        - ip: "10.40.1.121"
          hostnames:
            - "be.apps.okd4.fis.local"
      serviceAccountName: pipeline
      containers:
        - name: jobhunter-fe
          image: "10.40.1.138/public-repo/fe:29f6ae40"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jobhunter-fe
  namespace: ac-dev
spec:
  selector:
    app: jobhunter-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
